fixed wrapping problem for code snippets

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -53,7 +53,7 @@ footer {
 }
 
 pre {
-  white-space: wrap;
+  white-space: pre-wrap;
   word-wrap: break-word;
   line-clamp: 5;
 }
